--- a/style.css
+++ b/style.css
@@ -1,17 +1,53 @@
-
-
 * {
   background-color: hsl(212, 45%, 89%);
 }
 
+.div-parent {
+  display: flex;
+  justify-content: center;
+  vertical-align:bottom;
+}
 .div-card {
   background-color: hsl(0, 0%, 100%);
   text-align: center;
   border-radius: 10px;
   font-family: 'Outfit', sans-serif;
   max-width: 225px;
+  margin-top: 250px;
+
 }
 
 .qr-code {
-  border-radius: 5px;
+  border-radius: 6px;
+  /* margin: 5px; */
+  margin-top: 10px;
+}
+
+.div-p-bold {
+  font-family: 'Outfit', sans-serif;
+  background-color: white;
+  font-weight: 700;
+  font-size: ;
+  margin: 7.5px;
+}
+
+.div-p-reg {
+  font-family: 'Outfit', sans-serif;
+  background-color: white;
+  font-weight: 400;
+  font-size: 12px;
+  /* margin: 7.5px;
+  padding: 2.5px; */
+  margin: 10px 10px;
+  padding: 5px;
+  margin-bottom: 25px;
+}
+
+.attribution {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 24px;
+  align-content: center;
+  text-align: center;
 }
